--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PhoneGap Build Ketjilbergerak</title>
+    <title>Moskee in Laak</title>
   </head>
   <body>
 
     <header class="bar bar-nav">
-      <h1 class="title">Ketjilbergerak Development App</h1>
+      <h1 class="title">Moskee in Laak</h1>
     </header>
 
 	<p style="margin: auto; height: 50px; width: 100%; text-align: center">Loading....</p>
