--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<script src="cordova.js"></script>
 	<script>
 		function goToApp() {
-			window.open('http://mouahidin.nl', '_self', 'location=no,toolbar=no,zoom=no,enableViewportScale=no,hardwareback=no');
+			window.open('http://mouahidin.nl/gebedstijden', '_self', 'location=no,toolbar=no,zoom=no,enableViewportScale=no,hardwareback=no');
 		}
 		document.addEventListener('deviceready', goToApp, false);
 		setTimeout(function() {
