--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h1 id="loading">Loading...</h1>
 
 	<a onclick="goToApp()" id="after-loading" class="hide">
-		Ga naar website
+		Klik hier om app te openen
 	</a>
 
 	<script src="cordova.js"></script>
